tetrate/tis1703/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enforce-fips-compliant-images-chainsaw
spec:
  steps:
    - name: apply-enforce-fips-compliant-images-policy
      try:
        - apply:
            file: ../enforce-fips-compliant-images.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
